I fixed the directory structure for the OPTICS implementation.